testsuite/tests/properties/invalid_then/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example" ?name)
    name <- Name(@Identifier)
}

class FooNode implements Node[FooNode] {
}

class Name: FooNode implements TokenNode {
}
